Created employee type
